dygraphs 1.1.1.0 (unreleased)
--------------------------------------------------------------------------------

* Properly handle NULL dyEvent label (#112)

* Handle milliseconds in time events (#85)

* Add elementId parameter to dygraph function to specify explicit elementId

* Implement factory method so dygraph is addressable from widget instance:
  e.g. HTMLWidgets.getInstance(document.getElementById('mywidget')).dygraph


dygraphs 0.9
--------------------------------------------------------------------------------

* Handle vector data in dyEvent

* Don't do sizeChanged polling (no longer required)

* Option to disable y-axis touch events on mobile devices


dygraphs 0.8
--------------------------------------------------------------------------------

* Manage visibility of dygraphs in all types of boostrap tab panes

* Call widget.resize whenever parent size changes


dygraphs 0.7
--------------------------------------------------------------------------------

* Ensure that dygraphs are shown properly in R Markdown tabsets 

* Ensure that dygraphs are shown properly in reveal.js presentations

* Fix bug which prevented custom plotters from working in dySeries


dygraphs 0.6
--------------------------------------------------------------------------------

* Add support for plotting data with a numeric x-axis (previously only time series
  data was accepted).

* Add new logscale option for numeric x-axis.

* Add stemPlot option to dyOptions and dySeries.


dygraphs 0.5
--------------------------------------------------------------------------------

* Update embedded dygraphs to version 1.1

* Add support for show='follow' to dyLegend

* Add labelsUTC option to dyOptions

* Change default x axis label width to 60 (necessitated by changes to default
  dygraphs 1.1 x-axis year formatting)

* Allow explicit specification of series periodicity when creating a dygraph 


dygraphs 0.4.5
--------------------------------------------------------------------------------