@@ -12,6 +12,7 @@ export(dyHighlight)
 export(dyLegend)
 export(dyLimit)
 export(dyOptions)
+export(dyPlugin)
 export(dyRangeSelector)
 export(dyRoller)
 export(dySeries)
@@ -20,6 +21,7 @@ export(dyShading)
 export(dygraph)
 export(dygraphOutput)
 export(renderDygraph)
+importFrom(htmltools,htmlDependency)
 importFrom(htmlwidgets,JS)
 importFrom(magrittr,"%>%")
 importFrom(stats,end)
